# FPGA-LLM

./: .gitignore  Readme.md  build_version.txt  coredla_work.sh  dla.sh  final.sh  plugins.xml
runtime/: .gitignore  CMakeLists.txt  CPPLINT.cfg  TensorFlow_Frontend_IR_dla_layer_device.csv  accuracy_report.txt  build_hpspackages.sh  build_runtime.sh  create_hps_image.sh  de10_benchmark.sh  de10_program.sh  model_analyzer_report.txt  plugins.xml  unsupported_layer_chains.dot
runtime/classification_sample_async/: CMakeLists.txt  README.md  classification_sample_async.h  main.cpp
runtime/common/: CMakeLists.txt  README.md
runtime/common/demo_utils/: CMakeLists.txt
runtime/common/demo_utils/include/utils/: config_factory.h
runtime/common/demo_utils/src/: config_factory.cpp
runtime/common/format_reader/: CMakeLists.txt  MnistUbyte.h  bmp.h  format_reader.cpp  format_reader.h  npy.h  opencv_wrapper.cpp  opencv_wrapper.h  yuv_nv12.h
runtime/common/models/: CMakeLists.txt
runtime/common/monitors/: CMakeLists.txt
runtime/common/pipelines/: CMakeLists.txt
runtime/common/utils/: CMakeLists.txt
runtime/common/utils/src/: args_helper.cpp  latency_metrics.cpp
runtime/coredla_device/inc/: batch_job.h  coredla_batch_job.h  coredla_device.h  coredla_graph_job.h  device.h  device_memory_allocator.h  dla_dma_constants.h  graph_job.h  mmd_wrapper.h  stream_controller_comms.h
runtime/coredla_device/mmd/agx7_ofs_pcie/: CMakeLists.txt
runtime/coredla_device/mmd/agx7_ofs_pcie/host/: kernel_interrupt.cpp  kernel_interrupt.h  mmd.cpp  mmd_device.cpp  mmd_device.h  mmd_dma.cpp  mmd_dma.h  mmd_helper.cpp  mmd_helper.h
runtime/coredla_device/mmd/agx7_ofs_pcie/include/: aocl_mmd.h
runtime/coredla_device/mmd/dcp_a10_pac/: .gitignore  CMakeLists.txt
runtime/coredla_device/mmd/dcp_a10_pac/host/: afu_bbb_util.h  ccip_mmd.cpp  ccip_mmd_device.cpp  ccip_mmd_device.h  dma_work_thread.cpp  dma_work_thread.h  eventfd_wrapper.h  fpga_dma.c  fpga_dma.h  fpga_dma_internal.h  kernel_interrupt.cpp  kernel_interrupt.h  memcpy_s_fast.c  memcpy_s_fast.h  mmd_dma.cpp  mmd_dma.h  x86-sse2.S  x86-sse2.h
runtime/coredla_device/mmd/dcp_a10_pac/include/: aocl_mmd.h
runtime/coredla_device/mmd/de10_agilex/: CMakeLists.txt
runtime/coredla_device/mmd/de10_agilex/host/: acl_pcie.cpp  acl_pcie.h  acl_pcie_config.cpp  acl_pcie_config.h  acl_pcie_debug.cpp  acl_pcie_debug.h  acl_pcie_device.cpp  acl_pcie_device.h  acl_pcie_dma.h  acl_pcie_dma_linux.cpp  acl_pcie_dma_linux.h  acl_pcie_dma_windows.cpp  acl_pcie_dma_windows.h  acl_pcie_hostch.cpp  acl_pcie_hostch.h  acl_pcie_mm_io.cpp  acl_pcie_mm_io.h  acl_pcie_timer.cpp  acl_pcie_timer.h  hw_host_channel.h  hw_pcie_constants.h  pcie_linux_driver_exports.h  version.h
runtime/coredla_device/mmd/de10_agilex/include/: aocl_mmd.h  pkg_editor.h
runtime/coredla_device/mmd/hps_platform/: .gitignore  CMakeLists.txt
runtime/coredla_device/mmd/hps_platform/host/: acl_hps.cpp  acl_hps.h  dma_device.cpp  (+6 more)
runtime/coredla_device/mmd/system_console/: CMakeLists.txt  mmd_wrapper.cpp  system_console_script.tcl
runtime/coredla_device/src/: coredla_batch_job.cpp  coredla_device.cpp  coredla_graph_job.cpp  device_memory_allocator.cpp  mmd_wrapper.cpp  stream_controller_comms.cpp
runtime/coredla_device/stream_controller/: build.sh
runtime/coredla_device/stream_controller/app/: dla_registers.h  message_handlers.c  message_handlers.h  stream_controller.c  stream_controller.h  stream_controller_messages.h
runtime/dla_aot_splitter/: CMakeLists.txt  CPPLINT.cfg  README.md  sdl.cmake
runtime/dla_aot_splitter/dla_aot_splitter_example/: CMakeLists.txt
runtime/dla_aot_splitter/dla_aot_splitter_example/src/: main.cpp
runtime/dla_aot_splitter/dla_aot_splitter_plugin/: CMakeLists.txt  plugins_aot_splitter.xml  plugins_aot_splitter_win.xml
runtime/dla_aot_splitter/dla_aot_splitter_plugin/inc/: dla_aot_structs.h  dla_aot_utils.h  raw_batch_job.h  raw_device.h  raw_graph_job.h
runtime/dla_aot_splitter/dla_aot_splitter_plugin/src/: CPPLINT.cfg  dla_aot_utils.cpp  raw_batch_job.cpp  raw_device.cpp  raw_graph_job.cpp
runtime/dla_aot_splitter/inc/: dla_aot_splitter.hpp
runtime/dla_aot_splitter/src/: main.cpp
runtime/dla_benchmark/: CMakeLists.txt  README.md  average_precision.cpp  average_precision.hpp  convert_annotations.py  dla_benchmark.hpp  infer_request_wrap.hpp  inputs_filling.cpp  inputs_filling.hpp  main.cpp  progress_bar.hpp  shared_tensor_allocator.hpp  statistics_report.cpp  statistics_report.hpp  top1_top5.hpp  utils.cpp  utils.hpp
runtime/fpga_jtag_reprogram/: CMakeLists.txt  main.cpp
runtime/object_detection_demo/: CMakeLists.txt  CMakeLists.txt.orig  README.md  main.cpp
runtime/patches/: computelibrary.patch  flags.patch  openvino_5cee8bbf29797f4544b343e803de957e9f041f92_gcc11.3.0.patch
runtime/python_demos/: README.md
runtime/python_demos/OpenVINO_benchmark_app/: README.md  benchmark.patch  benchmark.py  benchmark_app.py  main.patch  main.py
runtime/python_demos/OpenVINO_classification_sample_async/: README.md  classification_sample_async.patch  classification_sample_async.py
runtime/scripts/hps/: create_toolchain_file.sh  setup_toolchain.sh
runtime/segmentation_demo/: CMakeLists.txt  README.md  main.cpp  models.lst
runtime/streaming/ed0_streaming_example/: README.md  system_console_script.tcl
runtime/streaming/ed0_streaming_example/include/: system_console_lib.tcl
runtime/streaming/image_streaming_app/: CMakeLists.txt  bmp_file.cpp  bmp_file.h  float16.h  image_streaming_app.cpp  image_streaming_app.h  raw_image.cpp  raw_image.h
runtime/streaming/image_streaming_app/layout_transform/: CMakeLists.txt
runtime/streaming/image_streaming_app/uio/: CMakeLists.txt
runtime/streaming/runtime_scripts/: run_image_stream.sh  run_inference_stream.sh
runtime/streaming/streaming_inference_app/: CMakeLists.txt  categories.txt  command_line.cpp  command_line.h  streaming_inference_app.cpp  streaming_inference_app.h
runtime/visualizations/: TensorFlow_Frontend_IR_0_after_all_passes.dot  TensorFlow_Frontend_IR_0_initial.dot
(+92 files in other folders)
